@@ -7,13 +7,15 @@ Description: Functions that simplify submitting R scripts to a slurm
 Acknowledgements: Development of this R package was supported by the National 
     Socio-Environmental Synthesis Center (SESYNC) under funding received from 
     the National Science Foundation grants DBI-1052875 and DBI-1639145.
-Version: 0.4.0.9002
+Version: 0.5.0
 License: GPL-3
 URL: https://github.com/SESYNC-ci/rslurm
 BugReports: https://github.com/SESYNC-ci/rslurm/issues
-Authors@R: c(person('Philippe', 'Marchand', email = "marchand.philippe@gmail.com", role = c('aut', 'cre')), 
+Authors@R: c(person('Philippe', 'Marchand', email = "marchand.philippe@gmail.com", role = 'aut'),
+             person('Ian', 'Carroll', role = 'aut'),
              person('Mike', 'Smorul', role = 'ctb'),
-             person('Ian', 'Carroll', role = 'ctb'))
+             person('Quentin', 'Read', email = 'qread@sesync.org', role = c('ctb', 'cre'))
+             )
 Depends:
     R (>= 3.2.0)
 Imports:
