@@ -1,3 +1,0 @@
-# rslurm 0.4.0.9002
-
-* Added a `NEWS.md` file to track changes to the package.
